﻿shmuel 17.03.2016 18:18:54 +0200 - build 4582

1. Кастомные сортировки в панелях повреждали содержимое внутренних структур FileListItem
   (это проявлялось при сборке Far с GCC 5.2 или 5.3).
   Алгоритм кастомной сортировки пришлось изменить, теперь нет прямой манипуляции с памятью.

drkns 14.03.2016 23:51:08 +0200 - build 4581

1. Вернём поведение ACTL_REDRAWALL, существовавшее до 4545.

shmuel 14.03.2016 11:39:07 +0200 - build 4580

1. При выводе на экран меню "Критерий сортировки" (CtrlF12) указатель ставится на текущую сортировку.

svs 14.03.2016 10:33:31 +0300 - build 4579

1. SQLite 3.11.1

shmuel 13.03.2016 21:45:25 +0200 - build 4578

1. Уточнение 4577.

shmuel 13.03.2016 01:35:20 +0200 - build 4577

1. В функции Panel.LoadCustomSortMode таблица параметров может включать в себя опциональное поле
   'Condition' (функцию). Данная функция может использоваться, например, в интерактивном режиме
   работы для изменения параметров сортировки, а также для её отмены.

drkns 12.03.2016 16:37:16 +0200 - build 4576

1. 0003194: Странное поведение при вставке в комстроку * и ? вплоть до падения

2. 0003195: Неверная подстановка имён файлов/каталогов с пробелами при включённой опции "Подставлять первый подходящий вариант"

3. 0003196: Автозавершение имён исполняемых файлов из %PATH% предлагается без кавычек даже для файлов с пробелами в имени

shmuel 11.03.2016 18:57:02 +0200 - build 4575

1. FCTL_GETPANELINFO выставляло значение SortMode для кастомных сортировок на 1 больше действительного.

drkns 10.03.2016 00:22:16 +0200 - build 4574

1. При вызове Menu.Show("\2qwe\n\4asd") терялись первые буквы в пунктах.

2. Из user menu выкинута прэлэстная логика превращения любого кривого hotkey в F1.

3. Уточнение 829.2 - подставляем FILE_FLAG_POSIX_SEMANTICS и для TRUNCATE_EXISTING.

4. Прочий мелкий рефакторинг.

drkns 08.03.2016 13:23:22 +0200 - build 4573

1. 0003189: Падение Far 3.0 при выставлении в формате командной строки чего-нибудь, содержащего "(%)"
