@@ -1,4 +1,9 @@
-﻿shmuel 17.03.2016 18:18:54 +0200 - build 4582
+﻿drkns 18.03.2016 12:00:11 +0200 - build 4583
+
+1. Продолжение 4582 - сортируем без расширения структуры FileListItem, которая и без того жирная.
+   Кроме того, возможно, будет немного быстрее.
+
+shmuel 17.03.2016 18:18:54 +0200 - build 4582
 
 1. Кастомные сортировки в панелях повреждали содержимое внутренних структур FileListItem
    (это проявлялось при сборке Far с GCC 5.2 или 5.3).
